added hp text